--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   --primary: #146eb4;
   --white: #fff;
   --heading: #1a181e;
-  --paragraph: #4d4d4d;
-  --muted-background: #f2f2f2;
-  --main-background: #fafafa;
-  --border-input: #d9d9d9;
+  --grey: #4d4d4d;
+  --grey-light: #d9d9d9;
+  --white-light: #f2f2f2;
+  --white-lightest: #fafafa;
   --feature-background: rgba(20, 110, 180, 0.05);
 }
