--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,10 +1,10 @@
 .main-conatiner {
-  background-color: var(--main-background);
+  background-color: var(--white-lightest);
   padding: 0px 160px 0px 160px;
 }
 .main-header {
   width: 100%;
-  height: 377px;
+  height: 328px;
   background-color: var(--primary);
   position: absolute;
   top: 0;
@@ -28,8 +28,9 @@
 }
 .input-label {
   font-size: 16px;
-  color: var(--paragraph);
-  font-family: galanogrotesque semibold;
+  line-height: 24px;
+  color: var(--grey);
+  font-family: galanogrotesque medium;
 }
 .input {
   position: relative;
@@ -38,7 +39,7 @@
 
 .main-input {
   width: 352px;
-  border: 1px solid var(--border-input);
+  border: 1px solid var(--grey-light);
   padding: 12px 16px;
   border-radius: 4px;
   color: var(--heading);
@@ -60,16 +61,19 @@
 .slogans-result-heading {
   font-family: galanogrotesque medium;
   font-size: 20px;
+  line-height: 28px;
 }
 
 .heading {
   color: var(--heading);
   font-size: 36px;
   font-family: galanogrotesque semibold;
+  line-height: 42px;
+  letter-spacing: -0.04em;
 }
 .sub-heading {
   font-size: 20px;
-  color: var(--paragraph);
+  color: var(--grey);
   font-family: galanogrotesque regular;
-  line-height: 24px;
+  line-height: 28px;
 }
