--- a/src/components/main/solgan/slogan.css
+++ b/src/components/main/solgan/slogan.css
@@ -6,13 +6,12 @@
 }
 .slogan-wrapper {
   position: relative;
-  min-width: 48%;
-  max-width: 48%;
+  width: 47%;
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 4px;
   line-height: 24px;
-  background-color: var(--muted-background);
+  background-color: var(--white-light);
   display: flex;
   align-items: center;
 }
@@ -31,6 +30,6 @@
   padding: 4px 8px;
   border-radius: 4px;
   color: var(--white);
-  background-color: var(--paragraph);
+  background-color: var(--grey);
   white-space: nowrap;
 }
