--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -10,11 +10,13 @@
   font-family: galanogrotesque medium;
   color: var(--heading);
   font-size: 20px;
+  font-weight: 400;
 }
 .product-card-abt {
   font-family: galanogrotesque regular;
   font-size: 16px;
-  color: var(--paragraph);
+  color: var(--grey);
+  font-weight: 400;
   line-height: 24px;
 }
 .wrap {
